app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
  namespace: myapp
spec:
  selector:
    istio: istio-ingressgateway-internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP2
      hosts:
        - "host.docker.internal"
